style: fix overlaps in game.html

--- a/assets/style.css
+++ b/assets/style.css
@@ -96,6 +96,7 @@ header {
     text-align: center;
 }
 
+/* ------- Index HTML ---------- */
 /* Main  */
 main {
     display: flex;
@@ -107,7 +108,7 @@ main {
 
 
 .main-container {
-    height: 540px;
+    height: 580px;
     background-color: white;
     width: 600px;
     padding: 30px;
@@ -322,6 +323,7 @@ h1 {
 .email-form-container {
     display: flex;
     align-items: center;
+    margin-top: 50px;
 }
 
 .email-form-section {
@@ -341,7 +343,7 @@ h1 {
     align-items: center;
 }
 
-/* ------- Index HTML ---------- */
+
 /* About */
 .about-main-container {
     height: 900px;
